# MAEDA

./: .env.example  .gitignore  CLAUDE.md  DEV_SPEC.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
data/demo/: churn_data.csv  ecommerce_orders.db  marketing_campaigns.csv  sales_data.csv
docs/: architecture.md  eval_report.md  interview_talking_points.md  roadmap.md
logs/eval_runs/: after_all_fixes.json  after_fixes.json  after_insight_fix.json  after_safe_refusal.json  baseline_b_rag_online.json  baseline_c_rag_scoped.json  baseline_d_all_fixes.json  baseline_e_quality_caveat.json  baseline_fallback.json  eval_1783351112.json  final_baseline.json  ground_truth_check.json  phase_a_factual_accuracy_fix.json  phase_a_final.json  phase_a_ground_truth.json  phase_a_judge_calibration.json  phase_a_tool_audit.json  phase_b_joins.json  phase_b_population_guardrail.json  phase_b_step_repair.json  phase_c_async_cleanup.json  phase_d_model_tiering.json
scripts/: demo_scenarios.py  generate_demo_data.py  run_eval.py
src/agents/: analysis_agent.py  base_agent.py  guardrail_agent.py  insight_agent.py  intent_parser.py  viz_agent.py
src/config/: agent_prompts.py  settings.py
src/eval/: metrics.py  runner.py
src/graph/: builder.py  nodes.py  router.py  streaming.py
src/mcp_client/: client.py  data_cleaner.py  fallback.py  models.py  rag_server.py
src/mcp_server/: server.py
src/persistence/: run_store.py
src/state/: graph_state.py
src/tools/: chart_tool.py  data_connector.py  (+3 more)
ui/: app.py
(+18 files in other folders)
