[tool.poetry]
name = "maeda"
version = "0.1.0"
description = "Multi-Agent Enterprise Data Analyst — LangGraph meta-orchestrator"
authors = ["MAEDA Team"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# LangGraph / LangChain
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
langchain-core = "^0.3.0"

# LLM providers
openai = "^1.40.0"
anthropic = "^0.34.0"

# Data handling
pandas = "^2.2.0"
numpy = "^1.26.0"
sqlalchemy = "^2.0.0"
openpyxl = "^3.1.0"

# Visualization
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.22.0"

# MCP
mcp = "^1.0.0"

# Configuration
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.0"

# Statistics
scipy = "^1.13.0"
scikit-learn = "^1.5.0"

# UI
streamlit = "^1.37.0"

# Utilities
httpx = "^0.27.0"
tenacity = "^8.5.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
